--- a/Página de Receita/index.html
+++ b/Página de Receita/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de receita</title>
     <link rel="stylesheet" href="style.css">4
-    
+
     <link href="https://fonts.googleapis.com/css2?family=Alice&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -56,10 +56,14 @@
                 <p>Para a montagem, faça um furo no centro dos cupcakes e recheie com o brigadeiro de café reservado. Decore as superfícies dos cupcakes com o chantilly reservado, fazendo círculos. Decore com grãos de café e leve à geladeira até o momento de servir.</p>
             </section>
         </main>
-
-        <footer>
-
-        </footer>
     </article>
+    
+    <footer>
+        <p>
+            Challenge by <a href="https://www.rocketseat.com.br/" target="_blank">Rocketseat</a>
+            <img src="assets/imagens/heart-fill.svg" alt="mini coração">
+            Coded by <a href="https://erikaestudar.github.io/course-project/Página de Receita/index.html" target="_blank">Erika Sugawara</a>
+        </p>
+    </footer>
 </body>
 </html>
