fazendo os estilos

--- a/Local Turístico/index.html
+++ b/Local Turístico/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Local Turístico</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mediaquery.css">
+
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <p>
-            Sua próxima viagem:
-        </p>
-        <h1>Conheça Busan</h1>
-    </header>
     <article id="title-page">
+        <header>
+            <p class="headline">
+                Sua próxima viagem:
+            </p>
+            <h1>Conheça Busan</h1>
+        </header>
+
         <img src="assets/images/busan-city.jpg" alt="Foto da cidade de Busan - Coreio do Sul">
-        <p>Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.</p>
+        <p class="subtitle">Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.</p>
+
         <main>
             <section id="title-list">
-                <h3>Para os amantes de história</h3>
+                <p class="headline">Para os amantes de história</p>
                 <h2>Descubra 3 destinos imperdíveis em Busan</h2>
                 <p>
                     As atrações de Busan vão desde templos budistas centenários que pontilham as montanhas e o litoral da cidade até praias imaculadas com águas cristalinas. Esta cidade litorânea tem muitas coisas para fazer o ano todo - as famílias podem passar o tempo em um aquário à beira-mar, os compradores podem explorar bairros vibrantes e os amantes da natureza podem desfrutar de longas caminhadas até mirantes panorâmicos.
@@ -27,7 +36,7 @@
 
             <section id="cardTravel-1">
                 <img src="assets/images/image1-temple.jpg" alt="Templo Haedong Yonggungsa">
-                <h2>1. Templo Haedong Yonggungsa </h2>
+                <h3>1. Templo Haedong Yonggungsa </h3>
 
                 <article>
                     <p>
@@ -44,7 +53,7 @@
 
             <section id="cardTravel-2">
                 <img src="assets/images/image2-temple.jpg" alt="Templo Beomeo-sa">
-                <h2>2. Templo Beomeo-sa</h2>
+                <h3>2. Templo Beomeo-sa</h3>
                 
                 <article>
                     <p>
@@ -61,7 +70,7 @@
 
             <section id="cardTravel-3">
                 <img src="assets/images/image3-park.jpg" alt="Parque Yongdusan">
-                <h2>3. Parque Yongdusan</h2>
+                <h3>3. Parque Yongdusan</h3>
                 
                 <article>
                     <p>
