espaços, cor, menu

--- a/Local Turístico/index.html
+++ b/Local Turístico/index.html
@@ -45,7 +45,7 @@
                     <p>
                         Bom para:
                         <ul>
-                            <li>História</li>
+                            <li class="history">História</li>
                         </ul>
                     </p>
                 </article>
@@ -62,7 +62,7 @@
                     <p>
                         Bom para:
                         <ul>
-                            <li>História</li>
+                            <li class="history">História</li>
                         </ul>
                     </p>
                 </article>
@@ -79,22 +79,26 @@
                     <p>
                         Bom para:
                         <ul>
-                            <li>Casais</li>
-                            <li>Famílias</li>
-                            <li>Orçamento</li>
+                            <li class="couple">Casais</li>
+                            <li class="family">Famílias</li>
+                            <li class="free">Orçamento</li>
                         </ul>
                     </p>
                 </article>
             </section>
         </main>
-        <p>
-            As melhores coisas para fazer em Busan mostram a reputação da cidade como um importante porto marítimo na Ásia. Frequentemente vista como a essência da Coreia do Sul, você experimentará uma atmosfera única em termos de diversidade étnica e cultural, já que a cidade recebe um público cosmopolita o ano todo. 
-        </p>
+        <aside>
+            <p>
+                As melhores coisas para fazer em Busan mostram a reputação da cidade como um importante porto marítimo na Ásia. Frequentemente vista como a essência da Coreia do Sul, você experimentará uma atmosfera única em termos de diversidade étnica e cultural, já que a cidade recebe um público cosmopolita o ano todo.
+            </p>
+        </aside>
     </article>
     <nav id="menu">
-        <a href="#"><img src="assets/icons/home.png" alt="Home"></a>
-        <a href="#"><img src="assets/icons/trip_bag.png" alt="Viagens"></a>
-        <a href="#"><img src="assets/icons/account_circle.png" alt="Perfil"></a>
+        <menu>
+            <a href="#"><img src="assets/icons/home.png" alt="Home"></a>
+            <a href="#"><img src="assets/icons/trip_bag.png" alt="Viagens"></a>
+            <a href="#"><img src="assets/icons/account_circle.png" alt="Perfil"></a>
+        </menu>
     </nav>
 </body>
 </html>
