--- a/Local Turístico/index.html
+++ b/Local Turístico/index.html
@@ -29,16 +29,19 @@
                 <p class="headline">Para os amantes de história</p>
                 <h2>Descubra 3 destinos imperdíveis em Busan</h2>
                 <p>
-                    As atrações de Busan vão desde templos budistas centenários que pontilham as montanhas e o litoral da cidade até praias imaculadas com águas cristalinas. Esta cidade litorânea tem muitas coisas para fazer o ano todo - as famílias podem passar o tempo em um aquário à beira-mar, os compradores podem explorar bairros vibrantes e os amantes da natureza podem desfrutar de longas caminhadas até mirantes panorâmicos.
+                    As atrações de Busan vão desde templos budistas centenários que pontilham as montanhas e o litoral da cidade até praias imaculadas com águas cristalinas. Esta cidade litorânea tem muitas coisas para fazer o ano todo - as famílias podem passar o tempo em um aquário à beira-mar, os compradores podem explorar bairros vibrantes e os amantes da natureza podem desfrutar de longas caminhadas até mirantes panorâmicos.
                     Os santuários budistas que pontilham a costa e as montanhas de Busan têm uma arquitetura impressionante que irá encantar os fotógrafos.
                 </p>
             </section>
 
             <section id="cardTravel-1">
                 <img src="assets/images/image1-temple.jpg" alt="Templo Haedong Yonggungsa">
-                <h3>1. Templo Haedong Yonggungsa </h3>
+                    <h3>
+                        1. Templo Haedong Yonggungsa
+                        <svg class="drop" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1c1c1c"><path d="M480-360 280-560h400L480-360Z"/></svg>
+                    </h3>
 
-                <article>
+                <article class="drop-text">
                     <p>
                         O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar – você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro.
                     </p>
@@ -53,9 +56,12 @@
 
             <section id="cardTravel-2">
                 <img src="assets/images/image2-temple.jpg" alt="Templo Beomeo-sa">
-                <h3>2. Templo Beomeo-sa</h3>
+                <h3>
+                    2. Templo Beomeo-sa 
+                    <svg class="drop" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1c1c1c"><path d="M480-360 280-560h400L480-360Z"/></svg>
+                </h3>
                 
-                <article>
+                <article class="drop-text">
                     <p>
                         O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon.
                     </p>
@@ -70,9 +76,12 @@
 
             <section id="cardTravel-3">
                 <img src="assets/images/image3-park.jpg" alt="Parque Yongdusan">
-                <h3>3. Parque Yongdusan</h3>
+                <h3>
+                    3. Parque Yongdusan 
+                    <svg class="drop" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1c1c1c"><path d="M480-360 280-560h400L480-360Z"/></svg>
+                </h3>
                 
-                <article>
+                <article class="drop-text">
                     <p>
                         O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats.
                     </p>
@@ -100,5 +109,7 @@
             <a href="#"><img src="assets/icons/account_circle.png" alt="Perfil"></a>
         </menu>
     </nav>
+
+    <script src="script.js"></script>
 </body>
 </html>
