--- a/travelgram/index.html
+++ b/travelgram/index.html
@@ -13,21 +13,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav>
-        <a href="#" id="logo">
-            <img src="assets/Logo.svg" alt="Logomarca">
-        </a>
-
-        <ul id="primary-menu">
-            <li>
-                <a href="#"><img src="assets/icons/MagnifyingGlass.svg" alt="ícone de busca"></a>
-            </li>
-            <li><a href="#">Explorer</a></li>
-            <li><a href="#">Minhas viagens</a></li>
-            <li><a href="#">
-                <img src="assets/Profile pic.png" alt="Imangem de Isabela Torres"></a>
-            </li>
-        </ul>
-    </nav>
+    <div class="bg-surface-color">
+        <nav class="conteiner">
+            <a href="#" id="logo">
+                <img src="assets/Logo.svg" alt="Logomarca">
+            </a>
+            <ul id="primary-menu">
+                <li>
+                    <a href="#"><img src="assets/icons/MagnifyingGlass.svg" alt="ícone de busca"></a>
+                </li>
+                <li><a href="#">Explorer</a></li>
+                <li><a href="#">Minhas viagens</a></li>
+                <li><a href="#">
+                    <img src="assets/Profile pic.png" alt="Imangem de Isabela Torres"></a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 </body>
 </html>
