--- a/travelgram/index.html
+++ b/travelgram/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="bg-surface-color">
-        <nav class="conteiner">
+        <nav class="container">
             <a href="#" id="logo">
                 <img src="assets/Logo.svg" alt="Logomarca">
             </a>
@@ -29,6 +29,54 @@
                 </li>
             </ul>
         </nav>
+    
+        <header>
+            <div class="container">
+                <div id="profile">
+                    <img src="assets/Profile pic.png" alt="Imagem de Isabela Torres">
+                    <div>
+                        <h1>Isabela Torres</h1>
+                        <p>Isabela Torres
+                            Amante de viagens, cultura e gastronomia. 🌍✈️ <br>
+                            Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso planeta a partir da movimentada cidade de São Paulo. 🏙️📸
+                        </p>
+                    </div>
+                </div>
+
+                <ul id="info">
+                    <li>
+                        <img src="assets/icons/MapPin.svg" alt="Ícone de mapa">
+                        <span>São Paulo, Brazil</span>
+                    </li>
+                    <li><img src="assets/icons/AirplaneTilt.svg" alt="Ícone do avião">
+                        <span>37 países</span>
+                    </li>
+                    <li>
+                        <img src="assets/icons/Image.svg" alt="Ícone de fotografia">
+                        <span>240 fotos</span>
+                    </li>
+                </ul>
+            </div>
+        </header>
     </div>
+    <main class="container">
+        <img src="assets/images/Image 01.png" alt="...">
+        <img src="assets/images/Image 02.png" alt="...">
+        <img src="assets/images/Image 03.png" alt="...">
+        <img src="assets/images/Image 04.png" alt="...">
+        <img src="assets/images/Image 05.png" alt="...">
+        <img src="assets/images/Image 06.png" alt="...">
+        <img src="assets/images/Image 07.png" alt="...">
+        <img src="assets/images/Image 08.png" alt="...">
+        <img src="assets/images/Image 09.png" alt="...">
+        <img src="assets/images/Image 10.png" alt="...">
+        <img src="assets/images/Image 11.png" alt="...">
+        <img src="assets/images/Image 12.png" alt="...">
+    </main>
+    <footer class="container">
+        <span>Travelgram &copy; 2024</span>
+        <span>Termos de uso</span>
+        <span>Política de privacidade</span>
+    </footer>
 </body>
 </html>
