--- a/travelgram/index.html
+++ b/travelgram/index.html
@@ -43,7 +43,7 @@
                     <img class="search-btn" src="assets/icons/MagnifyingGlass.svg" alt="ícone de busca">
                 </span>
                 <span>
-                    <svg xmlns="http://www.w3.org/2000/svg" height="28px" viewBox="0 -960 960 960" width="28px" fill="#6C6C6C"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
+                    <svg id="itens-btn" xmlns="http://www.w3.org/2000/svg" height="28px" viewBox="0 -960 960 960" width="28px" fill="#6C6C6C"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
                 </span>
             </div>
         </nav>
