--- a/travelgram/index.html
+++ b/travelgram/index.html
@@ -21,27 +21,20 @@
             <ul id="primary-menu">
                 <li>
                     <span>
-                        <label for="search-input-desktop">buscar</label>
-                        <input type="text" name="search-input-desktop" id="search-input-desktop" class="show-search">
+                        <label for="search-input">buscar</label>
+                        <input type="text" name="search-input" id="search-input" class="show-search">
                     </span>
                 </li>
                 <li>
                     <img class="search-btn" src="assets/icons/MagnifyingGlass.svg" alt="ícone de busca">
                 </li>
-                <li><a href="#">Explorer</a></li>
-                <li><a href="#">Minhas viagens</a></li>
-                <li><a href="#">
+                <li class="hidden"><a href="#">Explorer</a></li>
+                <li class="hidden"><a href="#">Minhas viagens</a></li>
+                <li class="hidden"><a href="#">
                     <img src="assets/Profile pic.png" alt="Imangem de Isabela Torres"></a>
                 </li>
             </ul>
             <div id="mobile-menu">
-                <span>
-                    <label for="search-input">buscar</label>
-                    <input type="text" name="search-input" id="search-input" class="show-search">
-                </span>
-                <span>
-                    <img class="search-btn" src="assets/icons/MagnifyingGlass.svg" alt="ícone de busca">
-                </span>
                 <span>
                     <svg id="itens-btn" xmlns="http://www.w3.org/2000/svg" height="28px" viewBox="0 -960 960 960" width="28px" fill="#6C6C6C"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
                 </span>
@@ -65,20 +58,6 @@
                             Amante de viagens, cultura e gastronomia. 🌍✈️ <br>
                             Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso planeta a partir da movimentada cidade de São Paulo. 🏙️📸
                         </p>
-
-                        <ul id="info-mobile">
-                            <li>
-                                <img src="assets/icons/MapPin.svg" alt="Ícone de mapa">
-                                <span>São Paulo, Brazil</span>
-                            </li>
-                            <li><img src="assets/icons/AirplaneTilt.svg" alt="Ícone do avião">
-                                <span>37 países</span>
-                            </li>
-                            <li>
-                                <img src="assets/icons/Image.svg" alt="Ícone de fotografia">
-                                <span>240 fotos</span>
-                            </li>
-                        </ul>
                     </div>
                 </div>
 
