--- a/travelgram/index.html
+++ b/travelgram/index.html
@@ -61,19 +61,21 @@
                     </div>
                 </div>
 
-                <ul id="info">
-                    <li>
-                        <img src="assets/icons/MapPin.svg" alt="Ícone de mapa">
-                        <span>São Paulo, Brazil</span>
-                    </li>
-                    <li><img src="assets/icons/AirplaneTilt.svg" alt="Ícone do avião">
-                        <span>37 países</span>
-                    </li>
-                    <li>
-                        <img src="assets/icons/Image.svg" alt="Ícone de fotografia">
-                        <span>240 fotos</span>
-                    </li>
-                </ul>
+                <figure id="box-info">
+                    <ul id="info">
+                        <li>
+                            <img src="assets/icons/MapPin.svg" alt="Ícone de mapa">
+                            <span>São Paulo, Brazil</span>
+                        </li>
+                        <li><img src="assets/icons/AirplaneTilt.svg" alt="Ícone do avião">
+                            <span>37 países</span>
+                        </li>
+                        <li>
+                            <img src="assets/icons/Image.svg" alt="Ícone de fotografia">
+                            <span>240 fotos</span>
+                        </li>
+                    </ul>
+                </figure>
             </div>
         </header>
     </div>
