--- a/pagina-de-receita/index.html
+++ b/pagina-de-receita/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <title>Página de receita</title>
-    <link rel="stylesheet" href="style.css">4
+    <link rel="stylesheet" href="styles/index.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Alice&display=swap" rel="stylesheet">
 </head>
@@ -33,20 +33,22 @@
 
             <section id="ingredients">
                 <h2>Ingredientes</h2>
-                    <li>1 e 1/2 xícara (chá) de água morna</li>
-                    <li>1 colher (sopa) de café solúvel</li>
-                    <li>3 ovos</li>
-                    <li>1/2 xícara (chá) de óleo</li>
-                    <li>2 xícaras (chá) de açúcar</li>
-                    <li>2/3 de xícara (chá) de chocolate em pó</li>
-                    <li>2 e 1/2 xícaras (chá) de farinha de trigo</li>
-                    <li>1 colher (sopa) de fermento em pó químico</li>
-                    <li>2 xícaras (chá) de chantilly pronto</li>
-                    <li>Grãos de café para decorar</li>
-                    <li>1 lata de leite condensado</li>
-                    <li>1 colher (sopa) de café solúvel</li>
-                    <li>1 colher (sopa) de chocolate em pó</li>
-                    <li>2 colheres (sopa) de manteiga</li>
+                    <ul>
+                        <li>1 e 1/2 xícara (chá) de água morna</li>
+                        <li>1 colher (sopa) de café solúvel</li>
+                        <li>3 ovos</li>
+                        <li>1/2 xícara (chá) de óleo</li>
+                        <li>2 xícaras (chá) de açúcar</li>
+                        <li>2/3 de xícara (chá) de chocolate em pó</li>
+                        <li>2 e 1/2 xícaras (chá) de farinha de trigo</li>
+                        <li>1 colher (sopa) de fermento em pó químico</li>
+                        <li>2 xícaras (chá) de chantilly pronto</li>
+                        <li>Grãos de café para decorar</li>
+                        <li>1 lata de leite condensado</li>
+                        <li>1 colher (sopa) de café solúvel</li>
+                        <li>1 colher (sopa) de chocolate em pó</li>
+                        <li>2 colheres (sopa) de manteiga</li>
+                    </ul>
             </section>
 
             <section id="preparation">
@@ -60,9 +62,9 @@
     
     <footer>
         <p>
-            Challenge by <a href="https://www.rocketseat.com.br/" target="_blank">Rocketseat</a>
+            Challenge by <a href="https://www.rocketseat.com.br/" target="_blank" rel="noopener">Rocketseat</a>
             <img src="assets/imagens/heart-fill.svg" alt="mini coração">
-            Coded by <a href="https://erikaestudar.github.io/course-project/Página de Receita/index.html" target="_blank">Erika Sugawara</a>
+            Coded by <a href="https://erikaestudar.github.io/course-project/Página de Receita/index.html" target="_blank" rel="noopener">Erika Sugawara</a>
         </p>
     </footer>
 </body>
