--- a/travelgram/index.html
+++ b/travelgram/index.html
@@ -55,7 +55,9 @@
                     <div>
                         <h1>Isabela Torres</h1>
                         <p>Isabela Torres
-                            Amante de viagens, cultura e gastronomia. 🌍✈️ <br>
+                            Amante de viagens, cultura e gastronomia. 🌍✈️
+                        </p>
+                        <p>
                             Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso planeta a partir da movimentada cidade de São Paulo. 🏙️📸
                         </p>
                     </div>
