--- a/travelgram/index.html
+++ b/travelgram/index.html
@@ -54,7 +54,7 @@
                     <img src="assets/Profile pic.png" alt="Imagem de Isabela Torres">
                     <div>
                         <h1>Isabela Torres</h1>
-                        <p>Isabela Torres
+                        <p id="destaque">Isabela Torres
                             Amante de viagens, cultura e gastronomia. 🌍✈️
                         </p>
                         <p>
