--- a/portal-de-noticias/index.html
+++ b/portal-de-noticias/index.html
@@ -43,7 +43,7 @@
     </header>
 
     <main class="grid container">
-        <section id="featured" class="grid grid-flow-col gap-16">
+        <section id="featured" class="grid grid-flow-col gap-16 mobile">
             <figure class="card">
                 <img src="assets/images/Image 01.png" alt="Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e eficiência nas residências.">
 
@@ -153,7 +153,7 @@
             </header>
 
             <div class="grid gap-32">
-                <article class="grid grid-flow-col gap-16">
+                <article class="grid grid-flow-col gap-16 screen">
                     <div>
                         <span class="content-tag">Inteligência Artificial</span>
                         <h3 class="text-xl">
@@ -169,7 +169,7 @@
                     </div>
                 </article>  
                 
-                <article class="grid grid-flow-col gap-16">
+                <article class="grid grid-flow-col gap-16 screen">
                     <div>
                         <span class="content-tag">Inteligência Artificial</span>
                         <h3 class="text-xl">
@@ -184,7 +184,7 @@
                     </div>
                 </article>        
 
-                <article class="grid grid-flow-col gap-16">
+                <article class="grid grid-flow-col gap-16 screen">
                     <div>
                         <span class="content-tag">Inteligência Artificial</span>
                         <h3 class="text-xl">
@@ -199,7 +199,7 @@
                     </div>
                 </article>        
 
-                <article class="grid grid-flow-col gap-16">
+                <article class="grid grid-flow-col gap-16 screen">
                     <div>
                         <span class="content-tag">Inteligência Artificial</span>
                         <h3 class="text-xl">
@@ -300,5 +300,7 @@
             </section>
         </aside>
     </main>
+
+    <script src="script.js"></script>
 </body>
 </html>
