--- a/portal-de-noticias/index.html
+++ b/portal-de-noticias/index.html
@@ -55,7 +55,7 @@
                 </figcaption>
             </figure>
 
-            <div class="grid grid-cols-2 gap-16">
+            <div class="grid grid-cols-2 gap-16 screen01">
                 <figure class="card">
                     <img src="assets/images/Image 02.png" alt="Novo Smartphone Projetor 3D chega ao mercado, transformando a forma como vemos nossas telas!">
 
