criando mobile-page

--- a/formulario-de-matricula/index.html
+++ b/formulario-de-matricula/index.html
@@ -11,10 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="app">
+    <div id="app" class="mobile-mode-secondary">
         <main>
             <div class="main-container">
-                <div class="back">
+                <div class="back" id="back-btn">
                     <img src="assets/icons/arrow-left-02.svg" alt="ícone de voltar">
                     <span>Voltar</span>
                 </div>
@@ -257,7 +257,16 @@
 
                 <img src="assets/images/Illustration.svg" alt="Ilustração de uma professora com crianças.">
             </div>
+
+            <div class="mobile-mode-primary">
+                <span>Preencher Formulário de Matrícula</span>
+                <button type="button" id="form-btn" class="btn-primary btn-aside">
+                    Formulário
+                </button>
+            </div>
         </aside>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
