corrigindo o mobile-mode

--- a/formulario-de-matricula/index.html
+++ b/formulario-de-matricula/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div id="app" class="mobile-mode-secondary">
-        <main>
+        <main class="mobile-hidden">
             <div class="main-container">
                 <div class="back" id="back-btn">
                     <img src="assets/icons/arrow-left-02.svg" alt="ícone de voltar">
@@ -243,7 +243,7 @@
             </div>
         </main>
 
-        <aside>
+        <aside class="mobile-hidden">
             <div class="aside-container">
                 <header>
                     <img src="assets/images/logo.svg" alt="Logo Estrelas do Amanhã">
