--- a/portfolio-dev/index.html
+++ b/portfolio-dev/index.html
@@ -3,14 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <title>Portfolio Dev</title>
     <link rel="stylesheet" href="styles/index.css">
-
+    <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>mfjfmifjmdki</h1>
-    <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit error porro, animi quibusdam ipsam quisquam ex eligendi. Laborum impedit qui vero sunt aspernatur unde quibusdam ducimus, autem at, cumque laudantium.</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro quis placeat doloremque ipsum aut repellat numquam nihil nam exercitationem dicta voluptatibus cupiditate odio harum consequatur at optio ipsa, sint excepturi?</p>
+    <header class="container">
+
+        <div class="introduce-wrapper" id="primary">
+
+            <div id="avatar" class="flex">
+
+                <div class="user-wrapper">
+
+                    <figure class="user-border">
+                        <img src="assets/images/border-user.png" alt="borda do perfil">
+                    </figure>
+
+                    <figure class="user-photo" >
+                        <img src="assets/images/user.png" alt="foto do usuário">
+                    </figure>
+
+                    <figure class="icon-code">
+                        <img src="assets/icons/Code01.png" alt="ícone de código">
+                    </figure>
+
+                </div>
+
+                <div class="info-wrapper">
+
+                    <span class="subtitle">
+                        Hello World! Meu nome é <span class="red">Martina Santos</span> e sou
+                    </span>
+
+                    <h1>Desenvolvedora Fullstack</h1>
+
+                    <p class="gray-400">
+                        Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.
+                    </p>
+
+                </div>
+            </div>
+
+            <div class="hard-skills">
+                <a href="#"><img src="assets/icons/github.svg" alt=""> GitHub</a>
+                <a href="#"><img src="assets/icons/html.svg" alt=""> HTML</a>
+                <a href="#"><img src="assets/icons/css.svg" alt=""> CSS</a>
+                <a href="#"><img src="assets/icons/javascript.svg" alt=""> Javascript</a>
+                <a href="#"><img src="assets/icons/react.svg" alt=""> React</a>
+                <a href="#"><img src="assets/icons/node.svg" alt=""> Node.js</a>
+            </div>
+        </div>
+
+        <div id="secondary">
+            <img src="assets/icons/CaretDoubleDown.png" alt="ícone mais conteúdo">
+        </div>
+    </header>
 </body>
 </html>
