--- a/portfolio-dev/index.html
+++ b/portfolio-dev/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="container">
+    <header class="header-container">
 
         <div class="introduce-wrapper" id="primary">
 
@@ -62,5 +62,76 @@
             <img src="assets/icons/CaretDoubleDown.png" alt="ícone mais conteúdo">
         </div>
     </header>
+
+    <main class="main-container">
+        <div class="title-container">
+            <span class="subtitle red">
+                Meu trabalho
+            </span>
+            <h2>Veja os projetos em destaque</h2>
+        </div>
+
+        <div class="grid project-container">
+            <figure>
+                <img src="assets/images/Thumbnail_Project-01.png" alt="">
+                <figcaption>
+                    <h3>Travelgram</h3>
+                    <p class="text-sm">
+                        Rede social onde as pessoas mostram os registros de suas viagens pelo mundo
+                    </p>
+                </figcaption>
+            </figure>
+
+            <figure>
+                <img src="assets/images/Thumbnail_Project-02.png" alt="">
+                <figcaption>
+                    <h3>Tech News</h3>
+                    <p class="text-sm">
+                        Homepage de um portal de notícias sobre a área de tecnologia
+                    </p>
+                </figcaption>
+            </figure>
+
+            <figure>
+                <img src="assets/images/Thumbnail_Project-03.png" alt="">
+                <figcaption>
+                    <h3>Página de receita</h3>
+                    <p class="text-sm">
+                        Página com o passo a passo de uma receita para cupcakes
+                    </p>
+                </figcaption>
+            </figure>
+
+            <figure>
+                <img src="assets/images/Thumbnail_Project-04.png" alt="">
+                <figcaption>
+                    <h3>Zingen</h3>
+                    <p class="text-sm">
+                        Landing Page completa e responsiva de um aplicativo de Karaokê
+                    </p>
+                </figcaption>
+            </figure>
+
+            <figure>
+                <img src="assets/images/Thumbnail_Project-05.png" alt="">
+                <figcaption>
+                    <h3>Refund</h3>
+                    <p class="text-sm">
+                        Um sistema para pedido e acompanhamento de reembolso 
+                    </p>
+                </figcaption>
+            </figure>
+
+            <figure>
+                <img src="assets/images/Thumbnail_Project-06.png" alt="">
+                <figcaption>
+                    <h3>Página de turismo</h3>
+                    <p class="text-sm">
+                        Página com as principais informações para quem quer viajar para Busan
+                    </p>
+                </figcaption>
+            </figure>
+        </div>
+    </main>
 </body>
 </html>
