--- a/portfolio-dev/index.html
+++ b/portfolio-dev/index.html
@@ -49,12 +49,30 @@
             </div>
 
             <div class="hard-skills">
-                <a href="#"><img src="assets/icons/github.svg" alt=""> GitHub</a>
-                <a href="#"><img src="assets/icons/html.svg" alt=""> HTML</a>
-                <a href="#"><img src="assets/icons/css.svg" alt=""> CSS</a>
-                <a href="#"><img src="assets/icons/javascript.svg" alt=""> Javascript</a>
-                <a href="#"><img src="assets/icons/react.svg" alt=""> React</a>
-                <a href="#"><img src="assets/icons/node.svg" alt=""> Node.js</a>
+                <figure class="itens-flex">
+                    <img src="assets/icons/github.svg" alt="ícone do GitHub"> 
+                    <figcaption class="word-hidden">GitHub</figcaption>
+                </figure>
+                <figure class="itens-flex">
+                    <img src="assets/icons/html.svg" alt="ícone do HTML"> 
+                    <figcaption class="word-hidden">HTML</figcaption>
+                </figure>
+                <figure class="itens-flex">
+                    <img src="assets/icons/css.svg" alt="ícone do CSS"> 
+                    <figcaption class="word-hidden">CSS</figcaption>
+                </figure>
+                <figure class="itens-flex">
+                    <img src="assets/icons/javascript.svg" alt="ícone do Javascript"> 
+                    <figcaption class="word-hidden">Javascript</figcaption>
+                </figure>
+                <figure class="itens-flex">
+                    <img src="assets/icons/react.svg" alt="ícone do React"> 
+                    <figcaption class="word-hidden">React</figcaption>
+                </figure>
+                <figure class="itens-flex">
+                    <img src="assets/icons/node.svg" alt="ícone do Node.js"> 
+                    <figcaption class="word-hidden">Node.js</figcaption>
+                </figure>
             </div>
         </div>
 
@@ -72,7 +90,7 @@
         </div>
 
         <div class="grid project-container">
-            <figure>
+            <figure class="flex">
                 <img src="assets/images/Thumbnail_Project-01.png" alt="">
                 <figcaption>
                     <h3>Travelgram</h3>
@@ -82,7 +100,7 @@
                 </figcaption>
             </figure>
 
-            <figure>
+            <figure class="flex">
                 <img src="assets/images/Thumbnail_Project-02.png" alt="">
                 <figcaption>
                     <h3>Tech News</h3>
@@ -92,7 +110,7 @@
                 </figcaption>
             </figure>
 
-            <figure>
+            <figure class="flex">
                 <img src="assets/images/Thumbnail_Project-03.png" alt="">
                 <figcaption>
                     <h3>Página de receita</h3>
@@ -102,7 +120,7 @@
                 </figcaption>
             </figure>
 
-            <figure>
+            <figure class="flex">
                 <img src="assets/images/Thumbnail_Project-04.png" alt="">
                 <figcaption>
                     <h3>Zingen</h3>
@@ -112,7 +130,7 @@
                 </figcaption>
             </figure>
 
-            <figure>
+            <figure class="flex">
                 <img src="assets/images/Thumbnail_Project-05.png" alt="">
                 <figcaption>
                     <h3>Refund</h3>
@@ -122,7 +140,7 @@
                 </figcaption>
             </figure>
 
-            <figure>
+            <figure class="flex">
                 <img src="assets/images/Thumbnail_Project-06.png" alt="">
                 <figcaption>
                     <h3>Página de turismo</h3>
@@ -133,5 +151,40 @@
             </figure>
         </div>
     </main>
+
+    <aside class="flex aside-container">
+        <div class="title-container">
+            <span class="subtitle red">
+                Meus Serviços
+            </span>
+            <h2>Como posso ajudar o seu negócio</h2>
+        </div>
+
+        <div class="devices-container">
+            <figure>
+                <img src="assets/icons/devices.svg" alt="ícone de dispositivos (aparelhos)">
+                <figcaption>
+                    <h3>Websites e Aplicativos</h3>
+                    <p class="text-sm">Desenvolvimento de interfaces</p>
+                </figcaption>
+            </figure>
+
+            <figure>
+                <img src="assets/icons/hardDrives.svg" alt="ícone de servidores">
+                <figcaption>
+                    <h3>API e banco de dados</h3>
+                    <p class="text-sm">Criação de serviços do sistema </p>
+                </figcaption>
+            </figure>
+
+            <figure>
+                <img src="assets/icons/infinity.svg" alt="ícone de DevOps">
+                <figcaption>
+                    <h3>DevOps</h3>
+                    <p class="text-sm">Gestão e infraestrutura da aplicação</p>
+                </figcaption>
+            </figure>
+        </div>
+    </aside>
 </body>
 </html>
