terminando o projeto, construção final do nav

--- a/portfolio-dev/index.html
+++ b/portfolio-dev/index.html
@@ -49,27 +49,27 @@
             </div>
 
             <div class="hard-skills">
-                <figure class="itens-flex">
+                <figure class="itens-flex hard-skills-size">
                     <img src="assets/icons/github.svg" alt="ícone do GitHub"> 
                     <figcaption class="word-hidden">GitHub</figcaption>
                 </figure>
-                <figure class="itens-flex">
+                <figure class="itens-flex hard-skills-size">
                     <img src="assets/icons/html.svg" alt="ícone do HTML"> 
                     <figcaption class="word-hidden">HTML</figcaption>
                 </figure>
-                <figure class="itens-flex">
+                <figure class="itens-flex hard-skills-size">
                     <img src="assets/icons/css.svg" alt="ícone do CSS"> 
                     <figcaption class="word-hidden">CSS</figcaption>
                 </figure>
-                <figure class="itens-flex">
+                <figure class="itens-flex hard-skills-size">
                     <img src="assets/icons/javascript.svg" alt="ícone do Javascript"> 
                     <figcaption class="word-hidden">Javascript</figcaption>
                 </figure>
-                <figure class="itens-flex">
+                <figure class="itens-flex hard-skills-size">
                     <img src="assets/icons/react.svg" alt="ícone do React"> 
                     <figcaption class="word-hidden">React</figcaption>
                 </figure>
-                <figure class="itens-flex">
+                <figure class="itens-flex hard-skills-size">
                     <img src="assets/icons/node.svg" alt="ícone do Node.js"> 
                     <figcaption class="word-hidden">Node.js</figcaption>
                 </figure>
@@ -153,7 +153,7 @@
     </main>
 
     <aside class="flex aside-container">
-        <div class="title-container">
+        <div class="flex title-container">
             <span class="subtitle red">
                 Meus Serviços
             </span>
@@ -186,5 +186,45 @@
             </figure>
         </div>
     </aside>
+
+    <section class="flex section-container">
+        <div class="flex title-container">
+            <span class="subtitle purple">
+                Contato
+            </span>
+            <h2>Gostou do meu trabalho?</h2>
+            <p class="text-md">Gostou do meu trabalho? </p>
+        </div>
+
+        <nav class="flex nav-container">
+            <span class="itens-flex">
+                <a href="#" class="itens-flex">
+                    <img src="assets/icons/linkedin.svg" alt="ícone do Linkedin">Linkedin
+                </a>
+                <img class="right" src="assets/icons/arrowUpRight.svg" alt="ícone de uma flexa com a ponta para direita apontando para cima">
+            </span>
+
+            <span class="itens-flex">
+                <a href="#" class="itens-flex">
+                    <img src="assets/icons/instagram-logo.svg" alt="ícone do Instagram">Instagram
+                </a>
+                <img src="assets/icons/arrowUpRight.svg" alt="ícone de uma flexa com a ponta para direita apontando para cima">
+            </span>
+
+            <span class="itens-flex">
+                <a href="#" class="itens-flex">
+                    <img src="assets/icons/github-logo.svg" alt="ícone do GitHub">GitHub
+                </a>
+                <img src="assets/icons/arrowUpRight.svg" alt="ícone de uma flexa com a ponta para direita apontando para cima">
+            </span>
+
+            <span class="itens-flex">
+                <a href="#" class="itens-flex">
+                    <img src="assets/icons/envelopeSimple.svg" alt="ícone de um envelope simples">E-mail
+                </a>
+                <img src="assets/icons/arrowUpRight.svg" alt="ícone de uma flexa com a ponta para direita apontando para cima">
+            </span>
+        </nav>
+    </section>
 </body>
 </html>
