--- a/portfolio-dev/index.html
+++ b/portfolio-dev/index.html
@@ -91,7 +91,7 @@
 
         <div class="grid project-container">
             <figure class="flex">
-                <img src="assets/images/Thumbnail_Project-01.png" alt="">
+                <img src="assets/images/Thumbnail_Project-01.png" alt="Projeto Travelgram">
                 <figcaption>
                     <h3>Travelgram</h3>
                     <p class="text-sm">
@@ -101,7 +101,7 @@
             </figure>
 
             <figure class="flex">
-                <img src="assets/images/Thumbnail_Project-02.png" alt="">
+                <img src="assets/images/Thumbnail_Project-02.png" alt="Projeto Tech News">
                 <figcaption>
                     <h3>Tech News</h3>
                     <p class="text-sm">
@@ -111,7 +111,7 @@
             </figure>
 
             <figure class="flex">
-                <img src="assets/images/Thumbnail_Project-03.png" alt="">
+                <img src="assets/images/Thumbnail_Project-03.png" alt="Projeto Página de Receitas">
                 <figcaption>
                     <h3>Página de receita</h3>
                     <p class="text-sm">
@@ -121,7 +121,7 @@
             </figure>
 
             <figure class="flex">
-                <img src="assets/images/Thumbnail_Project-04.png" alt="">
+                <img src="assets/images/Thumbnail_Project-04.png" alt="Projeto Zingen">
                 <figcaption>
                     <h3>Zingen</h3>
                     <p class="text-sm">
@@ -131,7 +131,7 @@
             </figure>
 
             <figure class="flex">
-                <img src="assets/images/Thumbnail_Project-05.png" alt="">
+                <img src="assets/images/Thumbnail_Project-05.png" alt="Projeto Página de Reembolso">
                 <figcaption>
                     <h3>Refund</h3>
                     <p class="text-sm">
@@ -141,7 +141,7 @@
             </figure>
 
             <figure class="flex">
-                <img src="assets/images/Thumbnail_Project-06.png" alt="">
+                <img src="assets/images/Thumbnail_Project-06.png" alt="Projeto Página de turismo">
                 <figcaption>
                     <h3>Página de turismo</h3>
                     <p class="text-sm">
@@ -222,7 +222,7 @@
                 <a href="#" class="itens-flex">
                     <img src="assets/icons/envelopeSimple.svg" alt="ícone de um envelope simples">E-mail
                 </a>
-                <img src="assets/icons/arrowUpRight.svg" alt="ícone de uma flexa com a ponta para direita apontando para cima">
+                <img src="assets/icons/arrowUpRight.svg" alt="ícone de uma flecha apontando para nordeste">
             </span>
         </nav>
     </section>
