--- a/portfolio-dev/index.html
+++ b/portfolio-dev/index.html
@@ -50,27 +50,27 @@
 
             <div class="hard-skills">
                 <figure class="itens-flex hard-skills-size">
-                    <img src="assets/icons/github.svg" alt="ícone do GitHub"> 
+                    <img src="assets/icons/icon-github.svg" alt="ícone do GitHub"> 
                     <figcaption class="word-hidden">GitHub</figcaption>
                 </figure>
                 <figure class="itens-flex hard-skills-size">
-                    <img src="assets/icons/html.svg" alt="ícone do HTML"> 
+                    <img src="assets/icons/icon-html.svg" alt="ícone do HTML"> 
                     <figcaption class="word-hidden">HTML</figcaption>
                 </figure>
                 <figure class="itens-flex hard-skills-size">
-                    <img src="assets/icons/css.svg" alt="ícone do CSS"> 
+                    <img src="assets/icons/icon-css.svg" alt="ícone do CSS"> 
                     <figcaption class="word-hidden">CSS</figcaption>
                 </figure>
                 <figure class="itens-flex hard-skills-size">
-                    <img src="assets/icons/javascript.svg" alt="ícone do Javascript"> 
+                    <img src="assets/icons/icon-javascript.svg" alt="ícone do Javascript"> 
                     <figcaption class="word-hidden">Javascript</figcaption>
                 </figure>
                 <figure class="itens-flex hard-skills-size">
-                    <img src="assets/icons/react.svg" alt="ícone do React"> 
+                    <img src="assets/icons/icon-react.svg" alt="ícone do React"> 
                     <figcaption class="word-hidden">React</figcaption>
                 </figure>
                 <figure class="itens-flex hard-skills-size">
-                    <img src="assets/icons/node.svg" alt="ícone do Node.js"> 
+                    <img src="assets/icons/icon-node.svg" alt="ícone do Node.js"> 
                     <figcaption class="word-hidden">Node.js</figcaption>
                 </figure>
             </div>
