--- a/portal-de-noticias/index.html
+++ b/portal-de-noticias/index.html
@@ -49,7 +49,7 @@
 
                 <figcaption>
                     <span class="content-tag">robótica</span>
-                    <h2 class="text-2xl">
+                    <h2 class="text-2xl mobile-h2">
                         Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e eficiência nas residências.
                     </h2>
                 </figcaption>
