--- a/portfolio-dev/index.html
+++ b/portfolio-dev/index.html
@@ -8,7 +8,7 @@
 
     <title>Portfolio Dev</title>
     <link rel="stylesheet" href="styles/index.css">
-    <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Asap:wdth,wght@75..125,700&family=Inconsolata:wdth@50..200&family=Maven+Pro:wght@400..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header-container">
