--- a/Zingen/index.html
+++ b/Zingen/index.html
@@ -12,11 +12,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div class="container even-columns">
-            <h1 class="py-xl px-lg">teste 1</h1>
-            <h1 class="py-xl px-lg">teste 2</h1>
-        </div>
+    <header class="flex gap-1">
+        <a href="#" class="btn btn-sm">Label</a>
+        <button class="btn btn-md">Label</button>
+        <button class="btn btn-lg">Label</button>
     </header>
 </body>
 </html>
