componentes de menu e social links

--- a/Zingen/index.html
+++ b/Zingen/index.html
@@ -12,6 +12,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <ul class="flex gap-1">
+        <li>
+            <a href="#" class="social" aria-label="tiktok"></a>
+        </li>
+        <li>
+            <a href="#" class="social" aria-label="instagram"></a>
+        </li>
+        <li>
+            <a href="#" class="social" aria-label="discord"></a>
+        </li>
+        <li>
+            <a href="#" class="social" aria-label="twitter"></a>
+        </li>
+    </ul>
+
     <div class="flex gap-1">
         <span class="btn btn-sm"><a href="#" >Label</a></span>
         <button class="btn btn-md">Label</button>
