--- a/formulario-de-matricula/index.html
+++ b/formulario-de-matricula/index.html
@@ -97,7 +97,7 @@
                             <input type="text" name="cep" id="cep">
                         </div>
 
-                        <div class="flex">
+                        <div class="flex flex-mobile">
                             <div class="input-wrapper flex-2">
                                 <label for="street">Rua</label>
                                 <input type="text" name="street" id="street"
@@ -110,7 +110,7 @@
                             </div>
                         </div>
 
-                        <div class="flex">
+                        <div class="flex flex-mobile">
                             <div class="input-wrapper flex-2">
                                 <label for="city">Cidade</label>
                                 <input type="text" name="city" id="city"
@@ -230,7 +230,7 @@
                         </label>
                     </div>
 
-                    <div class="actions-wrapper">
+                    <div class="actions-wrapper flex">
                         <button class="btn-secondary" type="button">
                             Salvar respostas
                         </button>
