--- a/portal-de-noticias/index.html
+++ b/portal-de-noticias/index.html
@@ -3,35 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    
+
     <title>Portal de notícias</title>
 
     <link rel="stylesheet" href="styles/index.css">
-    <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="container">
         <nav id="primary" class="grid grid-flow-col">
             <div>
                 <img src="assets/icons/List.svg" alt="ícone de menu">
-                <strong>Menu</strong>
+                <strong class="desktop-only">Menu</strong>
             </div>
             <div>
                 <img src="assets/Logo.png" alt="TechNews logo">
             </div>
             <div>
-                <strong>Buscar</strong>
+                <strong class="desktop-only">Buscar</strong>
                 <img src="assets/icons/MagnifyingGlass.svg" alt="ícone de lupa para pesquisa">
             </div>
         </nav>
 
-        <nav id="secondary" class="grid grid-flow-col">
+        <nav id="secondary" class="grid grid-flow-col gap-16">
             <a href="#">Inteligência Artificial</a>
             <a href="#">Blockchain</a>
             <a href="#">Hologramas</a>
@@ -43,19 +40,19 @@
     </header>
 
     <main class="grid container">
-        <section id="featured" class="grid grid-flow-col gap-16 mobile">
+        <section id="featured" class="grid grid-flow-col gap-16">
             <figure class="card">
                 <img src="assets/images/Image 01.png" alt="Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e eficiência nas residências.">
 
                 <figcaption>
                     <span class="content-tag">robótica</span>
-                    <h2 class="text-2xl mobile-h2">
+                    <h2 class="text-2xl">
                         Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e eficiência nas residências.
                     </h2>
                 </figcaption>
             </figure>
 
-            <div class="grid grid-cols-2 gap-16 screen01">
+            <div class="grid grid-cols-2 gap-16">
                 <figure class="card">
                     <img src="assets/images/Image 02.png" alt="Novo Smartphone Projetor 3D chega ao mercado, transformando a forma como vemos nossas telas!">
 
@@ -108,7 +105,7 @@
                 </a>
             </header>
 
-            <div class="grid gap-16 screen01">
+            <div class="grid gap-16">
                 <figure>
                     <span class="content-tag">veículos</span>
                     <img src="assets/images/Image 06.png" alt="Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos pessoais.">
@@ -153,7 +150,7 @@
             </header>
 
             <div class="grid gap-32">
-                <article class="grid grid-flow-col gap-16 screen">
+                <article class="grid grid-flow-col gap-16">
                     <div>
                         <span class="content-tag">Inteligência Artificial</span>
                         <h3 class="text-xl">
@@ -300,7 +297,6 @@
             </section>
         </aside>
     </main>
-
     <script src="script.js"></script>
 </body>
 </html>
