--- a/portal-de-noticias/index.html
+++ b/portal-de-noticias/index.html
@@ -29,13 +29,13 @@
         </nav>
 
         <nav id="secondary" class="grid grid-flow-col gap-16">
-            <a href="#">Inteligência Artificial</a>
-            <a href="#">Blockchain</a>
-            <a href="#">Hologramas</a>
-            <a href="#">Internet</a>
-            <a href="#">Vestíveis</a>
+            <a href="#ai">Inteligência Artificial</a>
+            <a href="#more">Blockchain</a>
+            <a href="#hologramas">Hologramas</a>
+            <a href="#internet">Internet</a>
+            <a href="#vestiveis">Vestíveis</a>
             <a href="#">Realidade Aumentada</a>
-            <a href="#">Realidade  Virtual</a>
+            <a href="#realidadevirtual">Realidade  Virtual</a>
         </nav>
     </header>
 
@@ -53,7 +53,7 @@
             </figure>
 
             <div class="grid grid-cols-2 gap-16">
-                <figure class="card">
+                <figure class="card" id="hologramas">
                     <img src="assets/images/Image 02.png" alt="Novo Smartphone Projetor 3D chega ao mercado, transformando a forma como vemos nossas telas!">
 
                     <figcaption>
@@ -63,7 +63,8 @@
                         </h2>
                     </figcaption>
                 </figure>
-                <figure class="card">
+
+                <figure class="card" id="internet">
                     <img src="assets/images/Image 03.png" alt="Tecnologia 6G chega às metrópoles brasileiras, prometendo revolucionar a forma como vivemos e nos comunicamos.">
 
                     <figcaption>
@@ -73,7 +74,8 @@
                         </h2>
                     </figcaption>
                 </figure>
-                <figure class="card">
+
+                <figure class="card" id="vestiveis">
                     <img src="assets/images/Image 04.png" alt="Empresa lança relógio inteligente capaz de monitorar a saúde mental, oferecendo insights valiosos para o bem-estar pessoal.">
 
                     <figcaption>
@@ -83,7 +85,8 @@
                         </h2>
                     </figcaption>
                 </figure>
-                <figure class="card">
+
+                <figure class="card" id="realidadevirtual">
                     <img src="assets/images/Image 05.png" alt="Escolas adotam a tecnologia VR para proporcionar experiências imersivas, transformando a aprendizagem tradicional.">
 
                     <figcaption>
@@ -106,7 +109,7 @@
             </header>
 
             <div class="grid gap-16">
-                <figure>
+                <figure id="veiculos">
                     <span class="content-tag">veículos</span>
                     <img src="assets/images/Image 06.png" alt="Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos pessoais.">
                     <p>
@@ -114,7 +117,7 @@
                     </p>
                 </figure>
 
-                <figure>
+                <figure id="hologramas">
                     <span class="content-tag">Hologramas</span>
                     <img src="assets/images/Image 07.png" alt="Plataforma de videoconferência apresenta nova função de hologramas, tornando as chamadas virtuais mais realistas e envolventes.">
                     <p>
@@ -122,7 +125,7 @@
                     </p>
                 </figure>
 
-                <figure>
+                <figure id="realidadevirtual">
                     <span class="content-tag">Realidade virtual</span>
                     <img src="assets/images/Image 08.png" alt="Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e experiências de jogo totalmente envolventes.">
                     <p>
@@ -130,7 +133,7 @@
                     </p>
                 </figure>
 
-                <figure>
+                <figure id="internet">
                     <span class="content-tag">Internet</span>
                     <img src="assets/images/Image 09.png" alt="Projeto busca oferecer internet de alta velocidade em áreas remotas através de satélites.">
                     <p>
