criando fonts, cores e o layout

--- a/formulario-de-convite/index.html
+++ b/formulario-de-convite/index.html
@@ -11,6 +11,26 @@
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@700&family=Leckerli+One&family=Open+Sans:wdth,wght@75..100,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div id="app" class="grid">
+        <aside>
+            <div class="aside-container">
+                <figure>
+                    <figcaption>
+                        <img src="assets/Logo.svg" alt="ícon de corneta de confete">
+                        <h1 class="f-logo">Festivite</h1>
+                        <p>
+                        Crie um convite digital para o seu evento
+                        </p>
+                    </figcaption>
+                </figure>
+            </div>
+        </aside>
+
+        <main>
+            <div class="main-container">
+                <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero soluta exercitationem totam rem ratione quas optio aspernatur nobis porro, fugiat quaerat corporis ipsam, ea modi libero incidunt possimus fuga quae.</h1>
+            </div>
+        </main>
+    </div>
 </body>
 </html>
