--- a/portal-de-noticias/index.html
+++ b/portal-de-noticias/index.html
@@ -53,7 +53,7 @@
             </figure>
 
             <div class="grid grid-cols-2 gap-16">
-                <figure class="card" id="hologramas">
+                <figure class="card">
                     <img src="assets/images/Image 02.png" alt="Novo Smartphone Projetor 3D chega ao mercado, transformando a forma como vemos nossas telas!">
 
                     <figcaption>
@@ -64,7 +64,7 @@
                     </figcaption>
                 </figure>
 
-                <figure class="card" id="internet">
+                <figure class="card">
                     <img src="assets/images/Image 03.png" alt="Tecnologia 6G chega às metrópoles brasileiras, prometendo revolucionar a forma como vivemos e nos comunicamos.">
 
                     <figcaption>
@@ -86,7 +86,7 @@
                     </figcaption>
                 </figure>
 
-                <figure class="card" id="realidadevirtual">
+                <figure class="card">
                     <img src="assets/images/Image 05.png" alt="Escolas adotam a tecnologia VR para proporcionar experiências imersivas, transformando a aprendizagem tradicional.">
 
                     <figcaption>
